laborations/lab1/test/bad/bad111.cc
int main () {
	(2+3) "foo";
}
